--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
-
+    <!-- Root tag for AndroidManifest.xml defining essential attributes about the app to Android system -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,17 +13,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChronoMetron"
         tools:targetApi="31">
+
+        <!-- LoginActivity which should be the first screen on app launch -->
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.ChronoMetron">
+            android:label="@string/login_title"
+            android:theme="@style/Theme.ChronoMetron.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-</manifest>
+        <!-- MainActivity which is the primary activity but not the first to be shown -->
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ChronoMetron"
+            android:exported="true">
+        </activity>
+
+        <!-- SignupActivity for new user registration -->
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ChronoMetron.NoActionBar"
+            android:label="@string/signup_title">
+        </activity>
+
+
+</application>
+
+    </manifest>
